--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/blog.css">
 </head>
+
 <body>
     <!-- Header with toggle switch -->
     <header>
@@ -28,22 +30,20 @@
     </header>
 
     <!-- Main content area for blog posts -->
-    <body id="blogPosts">
-        <h1>Blog Posts</h1>
+    <div id="blogPosts">
+        <h1 class = "h1">Blog Posts</h1>
         <div id="blogContainer"></div>
 
         <!-- Blog posts will be dynamically added here -->
-
+    </div>
 
     <!-- Footer with link to developer's portfolio -->
     <footer>
-        <a href="#">Developer's Portfolio</a>
+        <a href="https://github.com/natale565">Check Out My GitHub Page Here!</a>
     </footer>
 
     <!-- JavaScript files -->
     <script src="assets/js/logic.js"></script>
     <script src="assets/js/blog.js"></script>
 </body>
-
-
 </html>
